--- a/Project/Electro/.classpath
+++ b/Project/Electro/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/dgghe/Downloads/Java Material/Forgot Pass api/javax.activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dgghe/Downloads/Java Material/Forgot Pass api/javax.mail.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
